--- a/package.json
+++ b/package.json
@@ -4,14 +4,47 @@
   "description": "An app to manage your makeup",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server:dev": "nodemon server/app.js --watch server --exec babel-node --presets es2015,stage-2"
   },
   "author": "Vivian Sze",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^2.2.1"
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.6.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.9.0",
+    "font-loader": "^0.1.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "axios": "^0.15.3",
+    "babel-cli": "^6.23.0",
+    "babel-preset-node7": "^1.5.0",
+    "express": "^4.15.2",
+    "path": "^0.12.7",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.2",
+    "redux-saga": "^0.13.0",
+    "regenerator-runtime": "^0.10.1"
   }
 }
