--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An app to manage your makeup",
   "main": "index.js",
   "scripts": {
-    "server:dev": "nodemon server/app.js --watch server --exec babel-node --presets es2015,stage-2"
+    "start": "nodemon server/app.js --watch server --exec babel-node --presets es2015,stage-2"
   },
   "author": "Vivian Sze",
   "license": "ISC",
@@ -36,7 +36,11 @@
     "axios": "^0.15.3",
     "babel-cli": "^6.23.0",
     "babel-preset-node7": "^1.5.0",
+    "bcrypt": "^1.0.2",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.8.6",
+    "morgan": "^1.8.1",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
