--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-cli": "^6.23.0",
     "babel-preset-node7": "^1.5.0",
     "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.6",
